--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -28,7 +28,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-top: 15px;
+   
     padding-bottom: 10px;
 }
 .productprice-new_price{
@@ -64,6 +64,7 @@
     z-index: 1;
     position: absolute;
     top: 0;
+    left: 10px;
     right: 10px;
     display: flex;
     flex-direction: column;
@@ -148,4 +149,28 @@
 .wishlist:hover .item-tooltip-text{
     visibility: visible;
     opacity: 1;
+}
+
+
+/* =========item product ratings ====== */
+.item-product-ratings{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    padding: 0px 10px 5px 10px;
+}
+.rating{
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    background: orange;
+    color: #fff;
+    font-size: 12px;
+    padding: 0 5px;
+    border-radius: 5px;
+    font-weight: 600;
+}
+.offer{
+    font-size: 14px;
+    color: rgb(21, 161, 21);
 }
