--- a/frontend/src/Components/DisplayProduct/DisplayProduct.css
+++ b/frontend/src/Components/DisplayProduct/DisplayProduct.css
@@ -9,6 +9,7 @@
     display: flex;
     width: 40%;
     height: 100%;
+    /* flex-direction: column; */
 }
 .product-images{
     display: flex;
@@ -77,7 +78,7 @@
 .product-prices-new{
     display: flex;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: #ff4141;
 }
@@ -87,7 +88,7 @@
 .product-prices-old{
     display: flex;
     align-items: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 600;
     color: #333;
     text-decoration: line-through 2px;
@@ -124,6 +125,7 @@
 
 }
 .increase-decrease-item button{
+    background: none;
     width: 3rem;
     height: 2.5rem;
     border: none;
