--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -61,7 +61,6 @@
 }   
 
 .hover-wishlist-cart{
-    z-index: 1;
     position: absolute;
     top: 0;
     left: 10px;
@@ -70,12 +69,14 @@
     flex-direction: column;
     gap: 10px;
     margin: 10px;
-    display: none;
-    transition: all 0.5s ease-in;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: all 0.5s ease;
+    z-index: 1;
 }
 .items-container:hover .hover-wishlist-cart{
-   display: block;
-   transform: scale(1.1);
+   opacity: 1;
+   transform: translateY(0);
 }
 
 .hover-wishlist-cart .cartbox{
@@ -88,6 +89,11 @@
    display: flex;
    align-items: center;
    justify-content: center;
+}
+.hover-wishlist-cart .cartbox:active,
+.hover-wishlist-cart .wishlist:active{
+    transform: scale(0.95);
+    transition: transform 0.2s ease;
 }
 .hover-wishlist-cart .wishlist{
     margin-top: 10px;
@@ -109,10 +115,14 @@
   
  .hover-wishlist-cart .wishlist:hover{
     background: #ff4141;
+    transform: scale(1.2);
+    transition: transform 0.2s;
 
  }
  .hover-wishlist-cart .cartbox:hover{
     background: #ff4141;
+    transform: scale(1.2);
+    transition: transform 0.2s;
    
  }
 
@@ -138,9 +148,12 @@
     border-radius: 4px;
     padding: 5px;
     position: absolute;
-    left: 110%;
-    bottom: 5%;
-    z-index: 1;
+    /* left: 110%;
+    bottom: 5%; */
+    left: 50%;
+    bottom: 120%;
+    
+    z-index: 2;
     opacity: 0;
     transition: opacity 0.3s;
 }
