--- a/frontend/src/Pages/CSS/SignUp.css
+++ b/frontend/src/Pages/CSS/SignUp.css
@@ -56,6 +56,7 @@
 .submit-btn{
     width: 100%;
     padding: 10px;
+    margin-top: 25px;
     margin-bottom: 15px;
     border: none;
     outline: none;
@@ -69,10 +70,12 @@
     text-align: center;
     margin-bottom: 10px;
     font-weight: 600;
+    color: #444;
 }
 .signup-google{
     width: 100%;
     padding: 10px 20px;
+    margin-bottom: 20px;
 }
 .signup-google button{
     width: 100%;
