--- a/admin/src/Components/AddCategory/AddCategory.css
+++ b/admin/src/Components/AddCategory/AddCategory.css
@@ -4,4 +4,14 @@
     width: 90vw;
     height: 85vh;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+}
+.add-categories{
+    border: 1px solid;
+    width: 50%;
+    height: 300px;
+}
+.add-categories  h2{
+    text-align: center;
 }
