--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -179,7 +179,7 @@
 }
 .profile-dropdown{
     position: absolute;
-    width: 130px;
+    width: 180px;
     top: calc(100% + 10px);
     right: 10px;
     background: #fff;
@@ -188,6 +188,7 @@
     padding:10px 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
+   
 }
 .profile-dropdown::before{
     content: '';
@@ -201,9 +202,20 @@
 .profile-dropdown ul li{
     list-style: none;
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
 .profile-dropdown ul li:hover{
    background: #eee;
+}
+.profile-dropdown ul li svg{
+    font-size: 22px;
+    color: rgb(23, 23, 165);
+    margin-right: 10px;
+    margin-top: 5px;
+}
+.profile-dropdown ul li .logout-icon svg{
+    color: red;
 }
 
 /* === Tooltip === */
@@ -239,6 +251,7 @@
 .nav-second {
     padding: 10px 20px;
     transition: top 0.3s ease-in-out;
+    /* background-color: rgba(173, 216, 230, 0.096); */
 }
 
 /* fixed the second navbar */
