--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -61,11 +61,12 @@
     font-size: 20px;
 }
 .items-container:hover{
+    border: 1px solid #0048ba;
     box-shadow: 0px 2px 4px 0 #555;
     z-index: 1;
 }
 .items-container:hover img{
-    transform: scale(1.1);
+    transform: scale(1.2);
 }   
 
 .hover-wishlist-cart{
