--- a/frontend/src/Pages/CSS/Cart.css
+++ b/frontend/src/Pages/CSS/Cart.css
@@ -10,7 +10,52 @@
   flex-direction: column;
   gap: 20px;
   border-radius: 3px;
+  position: relative;
 }
+#showAddToCartAlert_snackbar {
+  visibility: hidden; 
+  min-width: 250px; 
+  margin-left: -125px; 
+  background-color: #ff4141; 
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 16px; 
+  position: absolute; 
+  z-index: 100; 
+  top: -10%;
+  right: 30px; 
+  font-weight: 600;
+}
+
+
+#showAddToCartAlert_snackbar.showAddToCartAlert-Snackbar {
+  visibility: visible;
+  -webkit-animation: fadein 0.3s, fadeout 0.5s 2.5s;
+  animation: fadein 0.3s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {right: 0; opacity: 0;}
+  to {right: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {right: 0; opacity: 0;}
+  to {right: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {right: 30px; opacity: 1;}
+  to {right: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {right: 30px; opacity: 1;}
+  to {right: 0; opacity: 0;}
+}
+
 .cart-title-container,
 .cart-product-container{
   /* width: 80vw; */
